--- a/ui/Selector.ui
+++ b/ui/Selector.ui
@@ -1,23 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>DockWidget</class>
- <widget class="QDockWidget" name="DockWidget">
+ <class>gsDockWidget</class>
+ <widget class="QgsDockWidget" name="gsDockWidget">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>607</width>
-    <height>198</height>
+    <height>192</height>
    </rect>
   </property>
-  <property name="minimumSize">
-   <size>
-    <width>607</width>
-    <height>198</height>
-   </size>
-  </property>
   <property name="windowTitle">
-   <string>GeoSAM Tool</string>
+   <string>gsDockWidget</string>
   </property>
   <widget class="QWidget" name="dockWidgetContents">
    <layout class="QGridLayout" name="gridLayout">
@@ -54,6 +48,9 @@
                <height>25</height>
               </size>
              </property>
+             <property name="toolTip">
+              <string>Press &quot;Z&quot; to undo (shortcut)</string>
+             </property>
              <property name="text">
               <string>Foreground</string>
              </property>
@@ -72,6 +69,9 @@
                <width>0</width>
                <height>25</height>
               </size>
+             </property>
+             <property name="toolTip">
+              <string>Press &quot;Z&quot; to undo (shortcut)</string>
              </property>
              <property name="text">
               <string>Background</string>
@@ -107,6 +107,9 @@
                <height>16777215</height>
               </size>
              </property>
+             <property name="toolTip">
+              <string>Press &quot;Z&quot; to undo (shortcut)</string>
+             </property>
              <property name="text">
               <string>Rectangle</string>
              </property>
@@ -118,6 +121,9 @@
        </layout>
       </widget>
       <widget class="QFrame" name="PolygonManager">
+       <property name="toolTip">
+        <string>Shortcut: C</string>
+       </property>
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
          <widget class="QGroupBox" name="ClearPromptGroupBox">
@@ -139,6 +145,9 @@
                <height>25</height>
               </size>
              </property>
+             <property name="toolTip">
+              <string>Press &quot;C&quot; to clear (shortcut)</string>
+             </property>
              <property name="text">
               <string>Clear</string>
              </property>
@@ -155,11 +164,20 @@
           <layout class="QGridLayout" name="gridLayout_4">
            <item row="1" column="0">
             <widget class="QPushButton" name="pushButton_save">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
              <property name="minimumSize">
               <size>
                <width>100</width>
                <height>25</height>
               </size>
+             </property>
+             <property name="toolTip">
+              <string>Press &quot;S&quot; to save (shortcut)</string>
              </property>
              <property name="text">
               <string>Save </string>
@@ -187,6 +205,12 @@
          <layout class="QHBoxLayout" name="horizontalLayout_6">
           <item>
            <widget class="QLineEdit" name="path_out">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>25</height>
+             </size>
+            </property>
             <property name="text">
              <string/>
             </property>
@@ -194,6 +218,12 @@
           </item>
           <item>
            <widget class="QToolButton" name="pushButton_find_file">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>25</height>
+             </size>
+            </property>
             <property name="text">
              <string>...</string>
             </property>
@@ -201,6 +231,12 @@
           </item>
           <item>
            <widget class="QPushButton" name="pushButton_load_file">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>25</height>
+             </size>
+            </property>
             <property name="text">
              <string>Load</string>
             </property>
@@ -219,6 +255,12 @@
          <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="0,0,0">
           <item>
            <widget class="QLineEdit" name="path_feature">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>25</height>
+             </size>
+            </property>
             <property name="text">
              <string/>
             </property>
@@ -226,6 +268,12 @@
           </item>
           <item>
            <widget class="QToolButton" name="pushButton_find_feature">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>25</height>
+             </size>
+            </property>
             <property name="text">
              <string>...</string>
             </property>
@@ -233,6 +281,12 @@
           </item>
           <item>
            <widget class="QPushButton" name="pushButton_load_feature">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>25</height>
+             </size>
+            </property>
             <property name="text">
              <string>Load</string>
             </property>
@@ -328,6 +382,14 @@
    </layout>
   </widget>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>QgsDockWidget</class>
+   <extends>QDockWidget</extends>
+   <header>qgsdockwidget.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
