--- a/ui/Selector.ui
+++ b/ui/Selector.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>917</width>
+    <width>665</width>
     <height>208</height>
    </rect>
   </property>
@@ -356,28 +356,9 @@
                 <item row="2" column="0">
                  <layout class="QHBoxLayout" name="horizontalLayout_dir">
                   <item>
-                   <widget class="QLineEdit" name="path_out">
-                    <property name="minimumSize">
-                     <size>
-                      <width>0</width>
-                      <height>25</height>
-                     </size>
-                    </property>
-                    <property name="text">
-                     <string/>
-                    </property>
-                   </widget>
-                  </item>
-                  <item>
-                   <widget class="QToolButton" name="pushButton_find_file">
-                    <property name="minimumSize">
-                     <size>
-                      <width>0</width>
-                      <height>25</height>
-                     </size>
-                    </property>
-                    <property name="text">
-                     <string>...</string>
+                   <widget class="QgsFileWidget" name="QgsFile_shapefile">
+                    <property name="options">
+                     <set>QFileDialog::DontConfirmOverwrite</set>
                     </property>
                    </widget>
                   </item>
@@ -419,32 +400,9 @@
                  <number>5</number>
                 </property>
                 <item row="2" column="0">
-                 <layout class="QHBoxLayout" name="Feature_folder" stretch="0,0,0">
+                 <layout class="QHBoxLayout" name="Feature_folder" stretch="0,0">
                   <item>
-                   <widget class="QLineEdit" name="path_feature">
-                    <property name="minimumSize">
-                     <size>
-                      <width>0</width>
-                      <height>25</height>
-                     </size>
-                    </property>
-                    <property name="text">
-                     <string/>
-                    </property>
-                   </widget>
-                  </item>
-                  <item>
-                   <widget class="QToolButton" name="pushButton_find_feature">
-                    <property name="minimumSize">
-                     <size>
-                      <width>0</width>
-                      <height>25</height>
-                     </size>
-                    </property>
-                    <property name="text">
-                     <string>...</string>
-                    </property>
-                   </widget>
+                   <widget class="QgsFileWidget" name="QgsFile_feature"/>
                   </item>
                   <item>
                    <widget class="QPushButton" name="pushButton_load_feature">
@@ -528,6 +486,11 @@
    <extends>QDockWidget</extends>
    <header>qgsdockwidget.h</header>
    <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>QgsFileWidget</class>
+   <extends>QWidget</extends>
+   <header>qgsfilewidget.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
