--- a/ui/Selector.ui
+++ b/ui/Selector.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>665</width>
+    <width>782</width>
     <height>208</height>
    </rect>
   </property>
@@ -22,7 +22,7 @@
         <property name="toolTip">
          <string>Shortcut: C</string>
         </property>
-        <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="5,1">
+        <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="5,1,1">
          <property name="spacing">
           <number>5</number>
          </property>
@@ -308,14 +308,61 @@
            </layout>
           </widget>
          </item>
+         <item>
+          <widget class="QGroupBox" name="EditModeGroupBox">
+           <property name="title">
+            <string>Edit mode</string>
+           </property>
+           <layout class="QGridLayout" name="EditMode">
+            <property name="leftMargin">
+             <number>5</number>
+            </property>
+            <property name="topMargin">
+             <number>5</number>
+            </property>
+            <property name="rightMargin">
+             <number>5</number>
+            </property>
+            <property name="bottomMargin">
+             <number>5</number>
+            </property>
+            <property name="spacing">
+             <number>5</number>
+            </property>
+            <item row="1" column="0">
+             <widget class="QRadioButton" name="radioButton_enable">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="minimumSize">
+               <size>
+                <width>100</width>
+                <height>25</height>
+               </size>
+              </property>
+              <property name="text">
+               <string>Enable</string>
+              </property>
+              <property name="checked">
+               <bool>false</bool>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </widget>
+         </item>
         </layout>
         <zorder>PolygonGroupBox</zorder>
         <zorder>PromptSelector</zorder>
+        <zorder>EditModeGroupBox</zorder>
        </widget>
       </item>
       <item>
        <widget class="QFrame" name="Bottom">
-        <layout class="QHBoxLayout" name="Bottom_row" stretch="5,1">
+        <layout class="QHBoxLayout" name="Bottom_row" stretch="6,1">
          <item>
           <widget class="QGroupBox" name="DirGroupBox">
            <layout class="QHBoxLayout" name="horizontalLayout">
@@ -427,11 +474,11 @@
           </widget>
          </item>
          <item>
-          <widget class="QGroupBox" name="EditModeGroupBox">
+          <widget class="QGroupBox" name="EditModeGroupBox_2">
            <property name="title">
-            <string>Edit mode</string>
+            <string>Feature boundary</string>
            </property>
-           <layout class="QGridLayout" name="EditMode">
+           <layout class="QGridLayout" name="EditMode_2">
             <property name="leftMargin">
              <number>5</number>
             </property>
@@ -448,7 +495,7 @@
              <number>5</number>
             </property>
             <item row="1" column="0">
-             <widget class="QRadioButton" name="radioButton_enable">
+             <widget class="QRadioButton" name="radioButton_show_extent">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
                 <horstretch>0</horstretch>
@@ -462,7 +509,7 @@
                </size>
               </property>
               <property name="text">
-               <string>Enable</string>
+               <string>Show</string>
               </property>
               <property name="checked">
                <bool>false</bool>
