--- a/ui/Selector.ui
+++ b/ui/Selector.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>782</width>
+    <width>810</width>
     <height>208</height>
    </rect>
   </property>
@@ -22,21 +22,21 @@
         <property name="toolTip">
          <string>Shortcut: C</string>
         </property>
-        <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="2,1,2,1,1">
+        <layout class="QHBoxLayout" name="top_row" stretch="2,1,2,1,1">
          <property name="spacing">
-          <number>5</number>
+          <number>1</number>
          </property>
          <property name="leftMargin">
-          <number>5</number>
+          <number>1</number>
          </property>
          <property name="topMargin">
-          <number>5</number>
+          <number>1</number>
          </property>
          <property name="rightMargin">
-          <number>5</number>
+          <number>1</number>
          </property>
          <property name="bottomMargin">
-          <number>5</number>
+          <number>1</number>
          </property>
          <item>
           <widget class="QGroupBox" name="horizontalGroupBox">
@@ -284,7 +284,7 @@
          <item>
           <widget class="QGroupBox" name="EditModeGroupBox">
            <property name="title">
-            <string>Edit mode</string>
+            <string>Lable Mode</string>
            </property>
            <layout class="QGridLayout" name="EditMode">
             <property name="leftMargin">
@@ -333,8 +333,20 @@
       <item>
        <widget class="QFrame" name="Bottom">
         <layout class="QHBoxLayout" name="Bottom_row" stretch="6,1">
+         <property name="spacing">
+          <number>1</number>
+         </property>
+         <property name="leftMargin">
+          <number>1</number>
+         </property>
          <property name="topMargin">
-          <number>6</number>
+          <number>1</number>
+         </property>
+         <property name="rightMargin">
+          <number>1</number>
+         </property>
+         <property name="bottomMargin">
+          <number>1</number>
          </property>
          <item>
           <widget class="QSplitter" name="splitterBottom">
@@ -437,7 +449,7 @@
          <item>
           <widget class="QGroupBox" name="EditModeGroupBox_2">
            <property name="title">
-            <string>Feature boundary</string>
+            <string>Feature Extent</string>
            </property>
            <layout class="QGridLayout" name="EditMode_2">
             <property name="leftMargin">
