--- a/ui/Selector.ui
+++ b/ui/Selector.ui
@@ -16,6 +16,12 @@
     <height>0</height>
    </size>
   </property>
+  <property name="maximumSize">
+   <size>
+    <width>524287</width>
+    <height>350</height>
+   </size>
+  </property>
   <property name="features">
    <set>QDockWidget::DockWidgetClosable|QDockWidget::DockWidgetMovable</set>
   </property>
@@ -32,7 +38,7 @@
    <property name="maximumSize">
     <size>
      <width>16777215</width>
-     <height>250</height>
+     <height>350</height>
     </size>
    </property>
    <layout class="QGridLayout" name="gridLayout">
@@ -64,7 +70,7 @@
         <property name="maximumSize">
          <size>
           <width>16777215</width>
-          <height>100</height>
+          <height>150</height>
          </size>
         </property>
         <property name="toolTip">
@@ -87,7 +93,7 @@
           <number>1</number>
          </property>
          <item>
-          <widget class="QGroupBox" name="horizontalGroupBox">
+          <widget class="QGroupBox" name="addPointsGroupBox">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -103,7 +109,16 @@
            <property name="alignment">
             <set>Qt::AlignHCenter|Qt::AlignTop</set>
            </property>
-           <layout class="QGridLayout" name="gridLayout_2" columnstretch="1,1" columnminimumwidth="0,0">
+           <layout class="QGridLayout" name="gridLayout_2" columnstretch="3,3" columnminimumwidth="0,0">
+            <property name="leftMargin">
+             <number>9</number>
+            </property>
+            <property name="rightMargin">
+             <number>9</number>
+            </property>
+            <property name="horizontalSpacing">
+             <number>4</number>
+            </property>
             <item row="0" column="0">
              <widget class="QPushButton" name="pushButton_fg">
               <property name="sizePolicy">
@@ -152,7 +167,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QGroupBox" name="BBoxPrompt">
+          <widget class="QGroupBox" name="addBBoxGroupBox">
            <property name="enabled">
             <bool>true</bool>
            </property>
@@ -165,7 +180,7 @@
            <property name="alignment">
             <set>Qt::AlignHCenter|Qt::AlignTop</set>
            </property>
-           <layout class="QGridLayout" name="gridLayout_7">
+           <layout class="QGridLayout" name="gridLayout_7" rowstretch="0" columnstretch="0">
             <property name="leftMargin">
              <number>11</number>
             </property>
@@ -220,7 +235,16 @@
            <property name="alignment">
             <set>Qt::AlignHCenter|Qt::AlignTop</set>
            </property>
-           <layout class="QGridLayout" name="gridLayout_6" columnstretch="1,1">
+           <layout class="QGridLayout" name="gridLayout_6" columnstretch="3,3">
+            <property name="leftMargin">
+             <number>9</number>
+            </property>
+            <property name="rightMargin">
+             <number>9</number>
+            </property>
+            <property name="horizontalSpacing">
+             <number>4</number>
+            </property>
             <item row="0" column="0">
              <widget class="QPushButton" name="pushButton_clear">
               <property name="sizePolicy">
@@ -356,7 +380,7 @@
         <property name="maximumSize">
          <size>
           <width>16777215</width>
-          <height>120</height>
+          <height>180</height>
          </size>
         </property>
         <property name="saveCollapsedState">
